// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for GoogleDataManager's syncUserData destination action: all fields 1`] = `
Object {
  "audienceMembers": Array [
    Object {
      "consent": Object {
        "adPersonalization": "CONSENT_GRANTED",
        "adUserData": "CONSENT_GRANTED",
      },
      "userData": Object {
        "userIdentifiers": Array [
          Object {
            "emailAddress": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
          },
          Object {
            "phoneNumber": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
          },
          Object {
            "address": Object {
              "familyName": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
              "givenName": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
              "postalCode": "Aq)B1!ex*ocK",
              "regionCode": "Aq)B1!ex*ocK",
            },
          },
        ],
      },
    },
  ],
  "destinations": Array [
    Object {
      "loginAccount": Object {
        "accountId": "8152223833",
        "product": "DATA_PARTNER",
      },
      "operatingAccount": Object {
        "accountId": "Aq)B1!ex*ocK",
      },
    },
  ],
  "encoding": "HEX",
  "termsOfService": Object {
    "customerMatchTermsOfServiceStatus": "ACCEPTED",
  },
}
`;

exports[`Testing snapshot for GoogleDataManager's syncUserData destination action: required fields 1`] = `
Object {
  "audienceMembers": Array [
    Object {
      "consent": Object {
        "adPersonalization": "CONSENT_GRANTED",
        "adUserData": "CONSENT_GRANTED",
      },
      "userData": Object {
        "userIdentifiers": Array [
          Object {
            "emailAddress": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
          },
          Object {
            "phoneNumber": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
          },
          Object {
            "address": Object {
              "familyName": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
              "givenName": "40274a86397845465d911de5e8dd22613cc7731b4fcc020e81b611a4861b8234",
              "postalCode": "Aq)B1!ex*ocK",
            },
          },
        ],
      },
    },
  ],
  "destinations": Array [
    Object {
      "loginAccount": Object {
        "accountId": "8152223833",
        "product": "DATA_PARTNER",
      },
      "operatingAccount": Object {
        "accountId": "Aq)B1!ex*ocK",
      },
    },
  ],
  "encoding": "HEX",
  "termsOfService": Object {
    "customerMatchTermsOfServiceStatus": "ACCEPTED",
  },
}
`;
